[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.5", features = ["derive", "env"]}
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
axum = { version = "0.8", features = ["macros"]}
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.17"

[dev-dependencies]
reqwest = {version = "0.12", features = ["json"]}
